[package]
name = "webmachine-rust"
version = "0.5.1"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
description = "Port of the Ruby Webmachine library to Rust"
homepage = "https://github.com/rholshausen/webmachine-rust"
repository = "https://github.com/rholshausen/webmachine-rust"
readme = "README.md"
keywords = ["webmachine"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.26"
futures = "0.3.28"
hex = "0.4.3"
http = "1.1.0"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
http-body-util = "0.1.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
serde = "1.0.163"
serde_json = "1.0.96"
tracing = "0.1.37"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
expectest = "0.12.0"
